--- a/lib/todo_web/templates/task/edit.html.heex
+++ b/lib/todo_web/templates/task/edit.html.heex
@@ -1,5 +1,5 @@
 <h1>Edit Task</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.project_task_path(@conn, :update, @task)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.project_task_path(@conn, :update, @project_id, @task)) %>
 
-<span><%= link "Back", to: Routes.project_task_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.project_task_path(@conn, :index, @project_id ) %></span>
