--- a/lib/todo_web/templates/task/index.html.heex
+++ b/lib/todo_web/templates/task/index.html.heex
@@ -13,8 +13,15 @@
     <tr>
       <td><%= task.name %></td>
       <td>
-        <span><%= task.project_id %></span>
-      </td>    
+        <span><%= task.id %></span>
+      </td>   
+      <td>
+        
+        <span><%= link "Show", to: Routes.project_task_path(@conn, :show, @project_id, task)%></span>
+        <span><%= link "Edit", to: Routes.project_task_path(@conn, :edit, @project_id, task) %></span>
+        <span><%= link "Delete", to: Routes.project_task_path(@conn, :delete, @project_id, task), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        
+      </td> 
     </tr>
 <% end %>
   </tbody>
